--- a/.htaccess
+++ b/.htaccess
@@ -1,5 +1,41 @@
-php_flag display_errors 1
-php_value error_reporting 32767
 <Files 'config.php'>
     Require all denied
 </Files>
+<IfModule mod_rewrite.c>
+Options +SymLinksIfOwnerMatch
+RewriteEngine On
+#RewriteRule ^favicon\.ico$ skins/larry/images/favicon.ico
+</IfModule>
+
+<IfModule mod_headers.c>
+# Disable page indexing
+Header set X-Robots-Tag "noindex, nofollow"
+
+# replace 'merge' with 'append' for Apache < 2.2.9
+Header merge Cache-Control public env=!NO_CACHE
+
+# Optional security headers
+# Only provides increased security if the browser supports those features
+# Be careful! Testing is required! They should be adjusted to your installation / user environment
+
+# HSTS - HTTP Strict Transport Security
+#Header always set Strict-Transport-Security "max-age=31536000; preload" env=HTTPS
+
+# HPKP - HTTP Public Key Pinning
+# Only template - fill with your values
+#Header always set Public-Key-Pins "max-age=3600; report-uri=\"\"; pin-sha256=\"\"; pin-sha256=\"\"" env=HTTPS
+
+# X-Xss-Protection
+# This header is used to configure the built in reflective XSS protection found in Internet Explorer, Chrome and Safari (Webkit).
+Header set X-XSS-Protection "1; mode=block"
+
+# X-Frame-Options
+# The X-Frame-Options header (RFC), or XFO header, protects your visitors against clickjacking attacks
+# Already set by php code! Do not activate both options
+Header set X-Frame-Options SAMEORIGIN
+
+# X-Content-Type-Options
+# It prevents Google Chrome and Internet Explorer from trying to mime-sniff the content-type of a response away from the one being declared by the server.
+Header set X-Content-Type-Options: "nosniff"
+
+</IfModule>
